--- a/app/styles/prism.css
+++ b/app/styles/prism.css
@@ -64,6 +64,7 @@ code[class*="language-"] ::selection {
 }
 
 @media print {
+
   code[class*="language-"],
   pre[class*="language-"] {
     text-shadow: none;
@@ -77,13 +78,13 @@ pre[class*="language-"] {
   overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
+:not(pre)>code[class*="language-"],
 pre[class*="language-"] {
   background: var(--lang-background);
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+:not(pre)>code[class*="language-"] {
   padding: 0.1em;
   border-radius: 0.3em;
   white-space: normal;
@@ -153,6 +154,7 @@ pre[class*="language-"] {
 .token.bold {
   font-weight: bold;
 }
+
 .token.italic {
   font-style: italic;
 }
@@ -174,11 +176,9 @@ pre[data-line] {
   margin-top: 1em;
 
   background: hsla(24, 20%, 50%, 0.08);
-  background: linear-gradient(
-    to right,
-    hsla(24, 20%, 50%, 0.1) 70%,
-    hsla(24, 20%, 50%, 0)
-  );
+  background: linear-gradient(to right,
+      hsla(24, 20%, 50%, 0.1) 70%,
+      hsla(24, 20%, 50%, 0));
 
   pointer-events: none;
 
@@ -213,4 +213,9 @@ pre[data-line] {
 .line-numbers .line-highlight:before,
 .line-numbers .line-highlight:after {
   content: none;
+}
+
+.badge-size {
+  max-width: 136px;
+  max-height: 52px;
 }
