--- a/app/styles/prism.css
+++ b/app/styles/prism.css
@@ -219,3 +219,13 @@ pre[data-line] {
   max-width: 136px;
   max-height: 52px;
 }
+
+div.text-zinc-600 a {
+  color: #06fafa;
+  transition: color 0.3s ease;
+}
+
+body.dark div.text-zinc-400 a {
+  color: #0a4e4e;
+  transition: color 0.3s ease;
+}
